feat: add force/optional app update flow from remote update.json
Port Dubaixia's AppUpdateManager so startup and Mine page can check, download, and install updates with a non-dismissible force path.